feat: add dialect functionality and basic spring implementation for it